--- a/index.html
+++ b/index.html
@@ -1,45 +1,171 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>CV Dariusz Siwek</title>
 </head>
 <body>
-    <h1><i><u>Portfolio Dariusza Siwka</u></i></h1>
-    <h2>Projektuję strony internetowe</h2>
-<hr/>
-<h3>
-<a href="./public/filmy.html">Najlepsze filmy</a>
-<p>
-<img src="./assets/images/filmy.png" height="200">
-</p>
+    <center><img src="./Obrazy/Nowy folder/moje zdjęcie.jpg" height="200"></center>
+    <center><h1><i>Podsumowanie</i></h1></center>
+    <center>
+        <h4>
+            Jestem entuzjastycznym web developerem, aktualnie uczestniczącym w kursie The Complete Web Development Bootcamp 
+        prowadzonym przez Dr. Angelę Yu. Posiadam różnorodne doświadczenie zawodowe, obejmujące pracę jako operator znakowarki 
+        laserowej i wtryskarki oraz stanowiska związane z obsługą klienta, takie jak kontroler biletów i dostawca pizzy. Te role 
+        nauczyły mnie zarządzania czasem, obsługi klienta oraz umiejętności technicznych, które teraz przenoszę do świata web 
+        developmentu. Koncentruję się na ciągłym poszerzaniu swoich kompetencji i zdobywaniu nowych umiejętności, aby jako freelancer 
+        dostarczać wysokiej jakości, innowacyjne rozwiązania dla moich klientów. Jestem zmotywowany, otwarty na wyzwania i gotowy,
+         aby moje zaangażowanie i pasja przyczyniły się do sukcesu Twojego projektu.
+        </h4>
+    </center>
+    <p>
+        <hr/>
+        <Center>
+            <h2>Doświadczenie zawodowe</h2>
+        </Center>
+        <i>07.2017 - 07.2024</i>
+        <p>
+            <ul>
+                <li>
+                    <b>Operator znakowarki laserowej i wtryskarki ("Modatec" Łódź)</b>
+                </li>
+            </ul>
+            Specjalista w zakresie znakowania laserowego z doświadczeniem w obsłudze znakowarki oraz aktywnym
+            pozyskiwaniu klientów
+        </p>
+        <i>05.2010 - 07.2014</i>
+        <p>
+            <ul>
+                <li>
+                    <b>Merchandiser ("Schneider+Klein Wyroby Metalowe Sp. z o.o.")</b>
+                </li>
+                <ul>
+                    <li>
+                        Zwiększyłem sprzedaż o 20% rocznie
+                    </li>
+                    <li>
+                        Zarządzanie zapasami z 98% dokładnością
+                    </li>
+                    <li>
+                        Kreatywne wizualizacje przyciągające klientów
+                    </li>
+                </ul>
+            </ul>
+        </p>
+        <i>01.2012 - 11.2012</i>
+        <p>
+            <ul>
+                <li>
+                    <b>Kontroler biletów ("PKK" Łódź)</b>
+                </li>
+                <ul>
+                    <li>
+                        Szybkie rozwiązywanie konfliktów z pasażerami
+                    </li>
+                    <li>
+                        Optymalizacja tras kontroli dla lepszej efektywności
+                    </li>
+                    <li>
+                        100% przestrzeganie przepisów i norm
+                    </li>
+                </ul>
+            </ul>
+        </p>
+        <i>10.2010 - 11.2011</i>
+        <p>
+            <ul>
+                <li>
+                    <b>Dostawca pizzy ("InCentro" Łódź")</b>
+                </li>
+            </ul>
+        </p>
+    <hr/>
+        <center>
+            <h2>Wykształcenie</h2>
+        </center>
+        <i>10.2015 - 04.2019</i>
+        <p>
+            <ul>
+                <li>
+                    <b>Politechnika Łódzka</b>
+                    <ul>
+                        <li>
+                            Specjalizacja: Inżynieria Bezpieczeństwa Pracy
+                        </li>
+                        <li>
+                            Poziom wykształcenia: niepełne wyższe
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </p>
+    <hr/>
+         <center>
+            <h2>Umiejętności</h2>
+         </center>
+         <p>
+            <ul>
+                <li>
+                    Obsługa programu VS Code
+                </li>
+                <li>
+                    Projektowanie stron internetowych
+                </li>
+                <li>
+                    Obsługa programu Symfonia Faktury
+                </li>
+                <li>
+                    Obsługa programu CorelDraw
+                </li>
+                <li>
+                    Obsługa programu Excel
 
+                </li>
+                <li>
+                    Pozyskiwanie klienta
+                </li>
+                <li>
+                    Obsługa klienta
+                </li>
+            </ul>
+         </p>
+    <hr/>
+        <center>
+            <h2>Szkolenia, kursy, certyfikaty</h2>
+        </center>
+        <p>
+            <i>06.2024</i>
+        </p>
+        <p>
+            <ul>
+                <li>
+                    The Complete Web Development Bootcamp - <b>Dr. Angela Yu</b>
+                </li>
+            </ul>
+        </p>
+        <p>
+            <i>11.2022</i>
+            <ul>
+                <li>
+                    Warsztaty „Flipy od zera” - <b>Daniel Siwiec</b>
+                </li>
+            </ul>
+        </p>
+        <p>
+            <i>02.2018</i>
+            <ul>
+                <li>
+                    Auditor Wewnętrzny Zintegrowanego Systemu Zarządzania zgodnego z wymaganiami norm ISO 9001:2015, ISO 14001:2015, PN-N-18001-2004 - <b>DEKRA</b>
 
-<p>
-        <a href="./public/urodziny.html">Zaproszenie na urodziny</a>
-</p>
-<p>
-    <img src="./assets/images/urodziny.jpg" height="200">
-</p>
-</h3><hr/>
-<a href="./public/o mnie.html">O mnie</a>
-<a href="./public/kontakt.html">Kontakt</a>
+                </li>
+            </ul>
+        </p>
+    <hr/>
+        <center>
+            <a href="./Public/Hobby.html">Hobby</a>
+            <a href="./Public/kontakt.html">Kontakt</a>
+        </center>
+    </p>
 </body>
 </html>
